--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -234,6 +234,45 @@
     <ClInclude Include="..\..\..\sonia\cstdint.hpp" />
     <ClInclude Include="..\..\..\sonia\config.hpp" />
     <ClInclude Include="..\..\..\sonia\exceptions.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\algo\algorithm.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\algo\round_robin.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\barrier.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\condition_variable.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\context.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\config.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\convert.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\cpu_relax.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\data.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\decay_copy.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\disable_overload.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\fss.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_status.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_adaptive.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_adaptive_futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\exceptions.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\fiber.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\fixedsize_stack.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\async.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\shared_state.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\shared_state_object.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\task_base.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\task_object.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\future.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\future_status.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\packaged_task.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\promise.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\mutex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\operations.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\policy.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\properties.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\scheduler.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\segmented_stack.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\type.hpp" />
     <ClInclude Include="..\..\..\sonia\function.hpp" />
     <ClInclude Include="..\..\..\sonia\iterator_traits.hpp" />
     <ClInclude Include="..\..\..\sonia\logger\loggable.hpp" />
@@ -486,6 +525,15 @@
     <ClInclude Include="..\..\..\sonia\utility\zlib_util.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\sonia\fibers\algo\algorithm.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\algo\round_robin.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\barrier.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\condition_variable.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\context.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\fiber.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\future.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\mutex.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\scheduler.cpp" />
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp" />
     <ClCompile Include="..\..\..\sonia\net\http\http.cpp" />
     <ClCompile Include="..\..\..\sonia\net\http\http_message.cpp" />
@@ -709,7 +757,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;SONIA_PRIME_STATIC;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_STACKTRACE_LINK;BOOST_FIBERS_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;SONIA_PRIME_STATIC;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_STACKTRACE_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\;$(ProjectDir)..\..\..\..\..\tpls\boost\include;$(ProjectDir)..\..\..\..\..\tpls\lexertl14\include;$(ProjectDir)..\..\..\..\..\tpls\zlib\include;$(ProjectDir)..\..\..\..\..\tpls\bzip2\include;$(ProjectDir)..\..\..\..\..\tpls\openssl\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -755,7 +803,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>
       </SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;SONIA_PRIME_STATIC;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_STACKTRACE_LINK;BOOST_FIBERS_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_LIB;SONIA_PRIME_STATIC;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_STACKTRACE_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\;$(ProjectDir)..\..\..\..\..\tpls\boost\include;$(ProjectDir)..\..\..\..\..\tpls\lexertl14\include;$(ProjectDir)..\..\..\..\..\tpls\zlib\include;$(ProjectDir)..\..\..\..\..\tpls\bzip2\include;$(ProjectDir)..\..\..\..\..\tpls\openssl\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
