--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -1707,6 +1707,9 @@
     <ClInclude Include="..\..\..\sonia\fibers\algo\round_robin.hpp">
       <Filter>sonia.fibers\algo</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\fibers\postponer.hpp">
+      <Filter>sonia.fibers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -1867,6 +1870,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\fibers\algo\round_robin.cpp">
       <Filter>sonia.fibers\algo</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\fibers\postponer.cpp">
+      <Filter>sonia.fibers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
