--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /projects/vs/sonia-prime-lib/Debug
 /projects/vs/sonia-prime-lib/x64
-/projects/vs/sonia-prime-lib/*.user
-/projects/vs/sonia-prime/*.user
 /projects/vs/sonia-prime/Debug
 /projects/vs/sonia-prime/x64
+/projects/vs/**/*.user
 /**/.DS_Store
