--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -65,7 +65,7 @@ elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
         ${BUNDLE_HOME}/sonia/sys/macos/dispatch.cpp
         ${BUNDLE_HOME}/sonia/sal/macos_sal.cpp
-        ${BUNDLE_HOME}/sonia/utility/linux.cpp
+        ${BUNDLE_HOME}/sonia/sys/linux//linux.cpp
         ${BUNDLE_HOME}/sonia/services/io/io_factory_macos.cpp
     )
 endif ()
