--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -55,17 +55,20 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
     )
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
-        ${BUNDLE_HOME}/sonia/sys/linux/linux.cpp
+        ${BUNDLE_HOME}/sonia/sys/posix/posix.cpp
+        #${BUNDLE_HOME}/sonia/sys/linux/linux.cpp
         ${BUNDLE_HOME}/sonia/sys/linux/signals_api.cpp
         ${BUNDLE_HOME}/sonia/sys/linux/linux_timer.cpp
-        ${BUNDLE_HOME}/sonia/sal/linux_sal.cpp
+        ${BUNDLE_HOME}/sonia/sal/posix_sal.cpp
+        #${BUNDLE_HOME}/sonia/sal/linux_sal.cpp
         ${BUNDLE_HOME}/sonia/services/io/io_factory_linux.cpp
     )
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
+        ${BUNDLE_HOME}/sonia/sys/posix/posix.cpp
         ${BUNDLE_HOME}/sonia/sys/macos/dispatch.cpp
-        ${BUNDLE_HOME}/sonia/sal/macos_sal.cpp
-        ${BUNDLE_HOME}/sonia/sys/linux//linux.cpp
+        ${BUNDLE_HOME}/sonia/sal/posix_sal.cpp
+        #${BUNDLE_HOME}/sonia/sal/macos_sal.cpp
         ${BUNDLE_HOME}/sonia/services/io/io_factory_macos.cpp
     )
 endif ()
